# sorock-os

./: Cargo.toml  Makefile  README.md  api.html  architecture.html  docker-compose.yml  index.html  introduction.html  math.html  print.html
.github/workflows/: book.yml  ci.yml
book/: book.toml
book/src/: SUMMARY.md  api.md  architecture.md  introduction.md  math.md
data-loss-calculator/: Cargo.toml
data-loss-calculator/src/: main.rs
failure-detector/: Cargo.toml  build.rs
failure-detector/proto/: fd.proto
failure-detector/src/: app_in.rs  app_out.rs  lib.rs  peer_out.rs  queue.rs  reporter.rs  server.rs
failure-detector/tests/: tests.rs
integration-tests/: Cargo.toml
integration-tests/src/: main.rs
sorock/: Cargo.toml  Dockerfile  build.rs
sorock-bin/: Cargo.toml
sorock-bin/src/: main.rs
sorock-core/: Cargo.toml
sorock-core/proto/: sorock.proto
sorock-core/src/: cluster_in.rs  cluster_map.rs  io_front.rs  lib.rs  peer_in.rs  peer_out.rs  piece_store.rs  raft_service.rs  rebuild.rs  rebuild_queue.rs  stabilizer.rs  storage_service.rs
sorock-core/src/piece_store/: mem.rs  mod.rs  sqlite.rs  sqlite_schema.sql
sorock-core/src/piece_store/sqlite/: mod.rs  schema.sql
sorock-core/tests/: fd_app_in_stub.rs  mem_piece_store.rs  tests.rs
sorock/proto/: sorock.proto
sorock/src/: cluster_in.rs  cluster_map.rs  def_services.rs  fd_app_out.rs  fd_app_out_impl.rs  io_front.rs  lib.rs  main.rs  peer_in.rs  peer_out.rs  piece_store.rs  rebuild.rs  safe_future.rs  stabilizer.rs  tests.rs
sorock/tests/: tests.rs
