[package]
name = "failure-detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
norpc = { version = "0.7", features = ["runtime"] }
paste = "1"

[build-dependencies]
tonic-build = "0.6"
prost-build = "0.9"