[package]
name = "failure-detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1", features = ["full"] }
norpc = { version = "0.7", features = ["runtime"] }
paste = "1"
rand = "0.8"
futures = "0.3"
anyhow = "1"

[build-dependencies]
tonic-build = "0.7"
prost-build = "0.10"

[dev-dependencies]
serial_test = "*"
anyhow = "1"