[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_lib = "1.3"
anyhow = "1"
lol-core = "0.9"
sorock-core = { path = "../sorock-core" }
tonic = "0.7"
tokio = { version = "1.10", features = ["full"] }