[package]
name = "sorock-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lol-core = { git = "https://github.com/akiradeveloper/lol" , features = ["simple"] }
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.10", features = ["full"] }
reed-solomon-erasure = { version = "4.0", features = [ "simd-accel" ] }
bytes = { version = "1", features = ["serde"] }
http-serde = "1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
futures = "0.3"
anyhow = "1"
norpc = { version = "0.7", features = ["runtime"] }
asura = { git = "https://github.com/akiradeveloper/asura" }
paste = "1"
bincode = "1.3"
thiserror = "1"
sqlx = { version = "0.5.11", features = ["sqlite", "runtime-tokio-rustls"] }
failure-detector = { path = "../failure-detector" }

[build-dependencies]
tonic-build = "0.7"
prost-build = "0.10"

[dev-dependencies]
serial_test = "*"
rand = "0.8"
md5 = "0.7"
tempfile = "3.3"