[package]
name = "sorock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lol-core = { git = "https://github.com/akiradeveloper/lol", features = ["simple", "rocksdb-backend"] }
sorock-core = { path = "../sorock-core" }
failure-detector = { path = "../failure-detector" }
tokio = { version = "1.10", features = ["full"] }
tonic = "0.6"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
anyhow = "1"
futures = "0.3"
envy = "0.4"
serde = { version = "1", features = ["derive"] }
http-serde = "1"
norpc = "0.7"